<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".EditCreateForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_article"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/newTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_title"
            android:inputType="text" />
        <TextView
            android:id="@+id/subtitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/newSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_subtitle"
            android:inputType="text" />
        <TextView
            android:id="@+id/categoryLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/selectCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:entries="@array/catSelector"
            android:spinnerMode="dialog"
            android:prompt="@string/category_label"
            android:layout_marginTop="10dp"/>

        <TextView
        android:id="@+id/abstractLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abstract_label"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/newAbstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_abstract"
            android:inputType="text" />

        <TextView
            android:id="@+id/bodyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/newBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_body"
            android:inputType="textMultiLine"
            android:lines="6"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                app:srcCompat="@drawable/account_circle" />
            <Button
                android:id="@+id/buttonPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_photo"
                android:layout_weight="4"
                android:gravity="end"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
                android:text="@string/button_cancel"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_save"
                android:text="@string/button_save"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
